fix(pom.xml): arreglando ejecucion nativa